Bug 95033 - Borders missing from some table cells in DOCX file (borders element of tblPrEx tag)
Summary: Borders missing from some table cells in DOCX file (borders element of tblPrE...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: László Németh
URL:
Whiteboard: interoperability target:6.5.0
Keywords: filter:docx
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2015-10-14 03:53 UTC by Matthew Holloway
Modified: 2025-04-05 01:30 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
See cell with content "Revenue implications" (22.24 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2015-10-14 03:53 UTC, Matthew Holloway
Details
How Microsoft Office 2013 renders the document (18.85 KB, image/png)
2015-10-14 03:54 UTC, Matthew Holloway
Details
How LibreOffice renders the document (51.72 KB, image/png)
2015-10-14 03:54 UTC, Matthew Holloway
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Holloway 2015-10-14 03:53:19 UTC
Created attachment 119587 [details]
See cell with content "Revenue implications"

In the attached document the table cell with "Revenue implications" is missing its left border.
Comment 1 Matthew Holloway 2015-10-14 03:54:04 UTC
Created attachment 119588 [details]
How Microsoft Office 2013 renders the document
Comment 2 Matthew Holloway 2015-10-14 03:54:54 UTC
Created attachment 119589 [details]
How LibreOffice renders the document
Comment 3 Cor Nouws 2015-10-14 08:47:20 UTC
Thanks Matthew for the issue and document.
Nice example.

(By the way: I guess the table should be at page 1 too?)
Ciao - Cor
Comment 4 Cor Nouws 2015-10-14 08:57:02 UTC Comment hidden (obsolete)
Comment 5 QA Administrators 2016-11-08 11:00:25 UTC Comment hidden (obsolete)
Comment 6 Cor Nouws 2016-11-08 11:31:42 UTC Comment hidden (obsolete)
Comment 7 QA Administrators 2017-12-08 08:09:15 UTC Comment hidden (obsolete)
Comment 8 Cor Nouws 2017-12-29 11:33:15 UTC Comment hidden (obsolete)
Comment 9 QA Administrators 2018-12-30 03:47:05 UTC Comment hidden (obsolete)
Comment 10 Cor Nouws 2019-01-01 18:00:41 UTC
still in Version: 6.3.0.0.alpha0+
Build ID: 082144fa0fb2021cfb41494bb6eb5bf417e58ab1
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-12-31_03:11:43
Locale: nl-NL (nl_NL.UTF-8); UI-Language: en-US
Calc: threaded
Comment 11 Szabolcs Toth 2019-11-07 12:36:24 UTC
tblPrEx is the tag that we entirely miss while importing and the key to this bug.
It contains table row formatting elements such as borders, shade, spacing, etc.
Solving this bug alone would only require the implementation of the borders element of tblPrEx, but that is just 1 of the 9 elements this tag can have.
LO does not deal with row properties the same way it deals with table and cell properties, so I don't see an easy way implementing this.

Plus, I could not reproduce this from 0 using 2016 MSO, it just outputs everything into a tcPr (table cell props) tag and that is perfectly fine with LO.

If someone starts working on this, a possible time saver:
Modify model.xml so you can read the elements of tblPrEx.
paste under <resource name="CT_TblPrEx" ... >
<element name="tblBorders" tokenid="ooxml:CT_TblPrEx_whateveryouwannacallit"/>
Comment 12 Commit Notification 2020-01-27 16:08:06 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8ffc1299ebf83450e67cf2a89304859e2558cd27

tdf#95033 DOCX import: apply tblPrEx table border

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.