tdf#95033 DOCX import: apply tblPrEx table border

exceptions of table rows, fixing for example
missing cell borders.

Change-Id: Id66af2706f564f46a1afd04bad65d1bf086a3232
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87514
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>