writerfilter/source/dmapper/DomainMapperTableHandler.cxx
@@ -738,6 +738,12 @@ CellPropertyValuesSeq_t DomainMapperTableHandler::endTableGetCellProperties(Tabl
         sal_Int32 nCell = 0;
         pCellProperties[nRow].realloc( aRowOfCellsIterator->size() );
         beans::PropertyValues* pSingleCellProperties = pCellProperties[nRow].getArray();
+
+        static const PropertyIds pBorders[] =
+        {
+            PROP_TOP_BORDER, PROP_LEFT_BORDER, PROP_BOTTOM_BORDER, PROP_RIGHT_BORDER
+        };
+
         while( aCellIterator != aCellIteratorEnd )
         {
             PropertyMapPtr pAllCellProps( new PropertyMap );
@@ -794,14 +800,33 @@ CellPropertyValuesSeq_t DomainMapperTableHandler::endTableGetCellProperties(Tabl
                     PropertyMapPtr pStyleProps = rInfo.pTableStyle->GetProperties( nCnfStyleMask );
 
                     // Check if we need to clean up some empty border definitions to match what Word does.
-                    static const PropertyIds pBorders[] =
-                    {
-                        PROP_TOP_BORDER, PROP_LEFT_BORDER, PROP_BOTTOM_BORDER, PROP_RIGHT_BORDER
-                    };
+                    // Apply also possible tblPrEx borders on cells
                     for (const PropertyIds& rBorder : pBorders)
                     {
                         o3tl::optional<PropertyMap::Property> oStyleCellBorder = pStyleProps->getProperty(rBorder);
+                        o3tl::optional<PropertyMap::Property> oRowCellBorder;
+                        // we can have table border exception in row properties
+                        if (*aRowIter && (*aRowIter)->isSet(rBorder))
+                            oRowCellBorder = (*aRowIter)->getProperty(rBorder);
                         o3tl::optional<PropertyMap::Property> oDirectCellBorder = (*aCellIterator)->getProperty(rBorder);
+                        if (oRowCellBorder && oDirectCellBorder)
+                        {
+                            table::BorderLine2 aRowCellBorder = oRowCellBorder->second.get<table::BorderLine2>();
+                            table::BorderLine2 aDirectCellBorder = oDirectCellBorder->second.get<table::BorderLine2>();
+                            if (aRowCellBorder.LineStyle != table::BorderLineStyle::NONE && aDirectCellBorder.LineStyle == table::BorderLineStyle::NONE)
+                                oDirectCellBorder = o3tl::optional<PropertyMap::Property>();
+                        }
+                        if (oRowCellBorder && !oDirectCellBorder)
+                        {
+                            table::BorderLine2 aRowCellBorder = oRowCellBorder->second.get<table::BorderLine2>();
+                            if ( (rBorder == PROP_LEFT_BORDER && nCnfStyleMask&CNF_FIRST_COLUMN)
+                                    || (rBorder == PROP_RIGHT_BORDER && bIsEndCol)
+                                    || (rBorder != PROP_LEFT_BORDER && rBorder != PROP_RIGHT_BORDER) )
+                            {
+                                (*aCellIterator)->Insert(rBorder, uno::makeAny(aRowCellBorder));
+                                oDirectCellBorder = (*aCellIterator)->getProperty(rBorder);
+                            }
+                        }
                         if (oStyleCellBorder && oDirectCellBorder)
                         {
                             // We have a cell border from the table style and as direct formatting as well.
@@ -914,6 +939,14 @@ CellPropertyValuesSeq_t DomainMapperTableHandler::endTableGetCellProperties(Tabl
             ++nCell;
             ++aCellIterator;
         }
+
+        // remove tblPrEx table border properties stored in row properties temporarily
+        for (const PropertyIds& rBorder : pBorders)
+        {
+            if (*aRowIter && (*aRowIter)->isSet(rBorder))
+                (*aRowIter)->Erase(rBorder);
+        }
+
         ++nRow;
         ++aRowOfCellsIterator;
         ++aRowIter;
